# OS_Project_xv6

./: CMakeLists.txt  New Text Document.txt
xv6-riscv/: Makefile
xv6-riscv/kernel/: defs.h  kalloc.c  proc.c  proc.h  syscall.h  sysinfo.h  sysproc.c  types.h
xv6-riscv/user/: HelloWorld.c  getProcTicksTest.c  sysinfoTest.c
